# Weaver

./: .dockerignore  .env.example  .gitignore  Dockerfile  Procfile  README.md  eval_cases.json  main.py  pyproject.toml  render.yaml  requirements.txt  supabase_schema.sql  supabase_schema_fixed.sql
app/: __init__.py  config.py
app/agents/: Weaver.code-workspace  __init__.py  base.py  critic.py  researcher.py  reviser.py
app/api/: __init__.py  eval_routes.py  routes.py
app/database/: __init__.py  connection.py
app/llm/: __init__.py  client.py
app/models/: __init__.py  research.py
app/orchestrator/: __init__.py  coordinator.py
app/tools/: __init__.py  arxiv_search.py  web_search.py  wikipedia.py
evals/: __init__.py  agent_adapter.py  evaluator.py  runner.py  types.py
evals/graders/: __init__.py  base.py  client_adapter.py  unified.py
frontend/: build_log.txt  lint_log.txt  package-lock.json  package.json  vercel.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/evals/: page.tsx
frontend/src/app/research/[taskId]/: page.tsx
frontend/src/components/: ProgressTracker.tsx  ReportViewer.tsx  ResearchForm.tsx
frontend/src/components/evals/: EvalPanel.tsx
frontend/src/lib/: api.ts  types.ts
